kubernetes/infrastructure/post-install/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/disable-admission-webhook: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd-dev.cloud.rbccoach.com
    secretName: argocd-server-tls
  rules:
  - host: argocd-dev.cloud.rbccoach.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
